WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306253
[threaded-animations] repeated crash on
https://nerdy.dev/anchor-interpolated-morphing
https://bugs.webkit.org/show_bug.cgi?id=306253
Summary
[threaded-animations] repeated crash on https://nerdy.dev/anchor-interpolated...
Antoine Quint
Reported
2026-01-26 00:45:42 PST
Loading
https://nerdy.dev/anchor-interpolated-morphing
with a ToT build crashes every time. We’re hitting this case in `auto ToPlatform<FilterValue>::operator()(const FilterValue& value, const RenderStyle& style)`: [](const FilterReference&) -> Ref<FilterOperation> { RELEASE_ASSERT_NOT_REACHED(); } While we explicitly disallow acceleration for filter animations with reference filters, this code is hit when we’re preparing the base values. We just need to make sure we don’t compute such values when the property is not animated, since in this case we must be animating opacity or a transform-related property.
Attachments
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2026-01-26 00:45:51 PST
rdar://168778245
Antoine Quint
Comment 2
2026-01-26 02:26:04 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57243
EWS
Comment 3
2026-01-26 07:21:33 PST
Committed
306204@main
(0fdb9b7d2bff): <
https://commits.webkit.org/306204@main
> Reviewed commits have been landed. Closing PR #57243 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug